--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>ToDo-list</title>
 </head>
 <body>
     <h1>ToDo</h1>
     <form id="form">
-        <input type="text" id="input" class="input" placeholder="ToDo..">
+        <input type="text" id="input" class="input" placeholder="ToDo.." autocomplete="off">
+
+        <ul class="todos" id="todos">
+            <li>ToDo-list</li>
+        </ul>
     </form>
+    <script src="script.js"></script>
 </body>
 </html>
