--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <h1>ToDo</h1>
     <form id="form">
         <input type="text" id="input" class="input" placeholder="ToDo.." autocomplete="off">
-
-        <ul class="todos" id="todos">
-            <li>ToDo-list</li>
-        </ul>
+        <ul class="todos" id="todos"></ul>
     </form>
+    <small>Left click to toggle complete. </br>
+        Right click to delete the todo.</small>
     <script src="script.js"></script>
 </body>
 </html>
